# sgx-ddk-um

./: Makefile  Makefile.am  configure.ac  pvrsrvinit.c
dbm/: Makefile.am  dbm.c  dbm.h  dbm_helpers.c  dbm_helpers.h
debian/: changelog  control  powervr.init  rules  sgx-ddk-um-dev.install  sgx-ddk-um-ti343x.install  sgx-ddk-um-ti443x.install  sgx-ddk-um-tools.install  sgx-ddk-um-tools.postinst
etc/profile.d/: mesa.sh
headers/usr/include/pvrsgx/: pvr2d.h
headers/usr/lib/pkgconfig/: sgx-ddk-um.pc
pvrsrvinit/: Makefile.am
scripts/: weaken-glibc-symbols.sh
src/: Makefile.am
ti343x/usr/lib/: libGLESv1_PVR_MESA.so.1.17.4948957  libglslcompiler.so.1.17.4948957
ti443x/usr/lib/: libGLESv1_PVR_MESA.so.1.17.4948957  libglslcompiler.so.1.17.4948957
